# tmp-events-to-discord

./: Cargo.toml  example.env
.github/workflows/: build.yaml  checks.yaml
src/: main.rs  tmp_response.rs
