[package]
name = "tmp-events-to-discord"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = [
    "Lily Hopkins <lily@hpkns.uk>",
]

[dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
getset = "0.1.3"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serenity = { version = "0.12.4", features = ["chrono", "model"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
