[package]
name = "tmp-events-to-discord"
version = "0.1.2"
edition = "2024"
license = "MIT"
authors = [
    "Lily Hopkins <lily@hpkns.uk>",
]

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
getset = "0.1.6"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serenity = { version = "0.12.4", features = ["chrono", "model"] }
tokio = { version = "1.46.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
